# PF_UP_ESP32

./: CMakeLists.txt  Node_Red_Proyecto_Final.json
main/: AUXILIARES_ALGORITMO_CONTROL_LUCES.c  AUXILIARES_ALGORITMO_CONTROL_LUCES.h  AUXILIARES_ALGORITMO_CONTROL_VAR_AMB.c  AUXILIARES_ALGORITMO_CONTROL_VAR_AMB.h  CMakeLists.txt  CO2_SENSOR.c  DEBUG_DEFINITIONS.h  DHT11_SENSOR.c  MEF_ALGORITMO_CONTROL_LUCES.c  MEF_ALGORITMO_CONTROL_LUCES.h  MEF_ALGORITMO_CONTROL_VAR_AMB.c  MEF_ALGORITMO_CONTROL_VAR_AMB.h  main.c
