idf_component_register(SRCS "AUXILIARES_ALGORITMO_CONTROL_LUCES.c" "MEF_ALGORITMO_CONTROL_LUCES.c" "MQTT_PUBL_SUSCR.c" 
                            "MEF_ALGORITMO_CONTROL_VAR_AMB.c" "DHT11_SENSOR.c" "CO2_SENSOR.c" 
                            "AUXILIARES_ALGORITMO_CONTROL_VAR_AMB.c" "LIGHT_SENSOR.c" "MCP23008.c"
                            "WiFi_STA.c" "main.c"
                    INCLUDE_DIRS ".")
